--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jest": "^25.1.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3"
   }
