--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     ]
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-joi-validation": "^4.0.3",
+    "helmet": "^3.21.2",
     "http-errors": "~1.6.3",
     "jest": "^25.1.0",
     "mongoose": "^5.8.11",
@@ -26,5 +30,8 @@
     "supertest": "^4.0.2",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/hapi__joi": "^16.0.9"
   }
 }
