--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^3.21.2",
     "http-errors": "~1.6.3",
     "jest": "^25.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.2",
