--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2",
