--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
-    "@types/hapi__joi": "^16.0.9"
+    "@shelf/jest-mongodb": "^1.1.5",
+    "@types/hapi__joi": "^16.0.9",
+    "@types/jest": "^25.2.1",
+    "mongodb-memory-server": "^6.5.2"
   }
 }
